--- a/database/user.yml
+++ b/database/user.yml
@@ -1,20 +1,11 @@
 ---
 
-- name: 'Mr. Richard Mosciski V'
-
-- name: Miss Dolores Willms III
-
-- name: Nestor Rogahn PhD
-
-- name: Dr. Percival Jakubowski IV
-
-- name: Ms. Nola Cruickshank V
-
-- name: Braxton Hane
-
-- name: Larissa Schultz
-
-- name: Lia Lemke
-
-- name: Isobel Schultz
-
+- Mr. Richard Mosciski V
+- Miss Dolores Willms III
+- Nestor Rogahn PhD
+- Dr. Percival Jakubowski IV
+- Ms. Nola Cruickshank V
+- Braxton Hane
+- Larissa Schultz
+- Lia Lemke
+- Isobel Schultz
